--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Beth+Ellen&family=Unna&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,15 +8,15 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
-    color: #333;
+    font-family: 'Unna', serif;
+    background-color: #141414;
+    color: rgb(249, 246, 237);
   }
   
   header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
     position: sticky;
@@ -33,7 +36,7 @@
   
   header a.active,
   header a:hover {
-    color: #f6d365;
+    color: rgb(250, 244, 230);
   }
   
   main {
@@ -50,7 +53,7 @@
   }
   
   h1 {
-    font-size: 48px;
+    font-size: 70px;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
@@ -60,6 +63,7 @@
     font-size: 36px;
     text-align: center;
     margin-top: 30px;
+    font-family: 'Beth Ellen', cursive;
   }
   
   h3 {
@@ -100,6 +104,21 @@
     text-align: center;
     transition: opacity 2s ease-in-out;
   }
+
+  .hero-h1-wrapper {
+    display: flex;
+    flex-flow: row;
+  }
+
+  .hero-h2,
+  .hero-h3 {
+    font-family: 'Unna', serif;
+  }
+
+  .hero-h1 {
+    font-size: 120px;
+    font-family: 'Beth Ellen', cursive;
+  }
   
   /* About */
   .about {
@@ -111,8 +130,23 @@
   }
   
   .about p {
-    max-width: 800px;
+    max-width: 300px;
+    text-align: justify;
+    
   }
+
+  .about-me-wrapper {
+    display: flex;
+    flex-flow: row;
+    margin-top: 3rem;
+  }
+
+  .about-me-img {
+    width:25rem;
+    margin-right: 10rem;
+  }
+
+
   
   /* ProjectShowcase */
   .project-showcase {
@@ -252,6 +286,11 @@
   .project-showcase {
     position: relative;
     overflow: hidden;
+  }
+
+  .project-showcase-title {
+    text-align: center;
+    margin-bottom: 20px;
   }
   
   .project-showcase-container {
