--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -15,7 +15,7 @@
   
   header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
@@ -84,7 +84,7 @@
   }
   
   footer {
-    background-color: rgba(255, 255, 255, 0.9);
+   
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
     position: sticky;
